--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -47,6 +47,7 @@
     
     .pcs-collapse-table-container { display: none; }
     .pcs-edit-section-link-container { display: none; }
+    figure { display: none; }
 
   </style>
 </head>
