--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -4,55 +4,70 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>wikiloop – Infinite Wikipedia Scroll</title>
-  <!-- Tailwind via CDN for quick styling -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <style>
-    body {
-      background-color: #f8fafc;
-    }
-    .logo {
-      width: 250px; 
-    }
+    body { background: #f8fafc; margin: 0; }
+    .logo { width: 12rem; }
+
+    /* Base card styling */
     .article-card {
       position: relative;
       max-width: 400px;
       max-height: 700px;
       margin: 2rem auto;
       cursor: pointer;
-      transition: height 0.35s ease, box-shadow 0.2s ease;
+      transition: height 0.35s ease;
     }
-    .article-card:hover {
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-    }
-    .preview-img {
-      width: 100%;
-      max-height: 300px;
-      object-fit: cover;
-    }
-    .article-card img {
-      max-width: 100%;
-      height: auto;
-    }
-    .article-card section,
-    .article-card details { display:block!important; }
-    .article-card .mw-collapsible-toggle { display:none!important; }
-    .close-btn {
-      position:absolute; top:0.5rem; right:0.75rem;
-      font-size:1.25rem; line-height:1rem; font-weight:600;
-      color:#4b5563; cursor:pointer; z-index:10;
-      transition:color .15s ease;
-    }
-      .close-btn:hover { color:#000; }
+    .article-card:hover { box-shadow: 0 8px 24px rgba(0,0,0,0.1); }
+    .preview-img { width: 100%; max-height: 300px; object-fit: cover; }
+    .article-card img { max-width: 100%; height: auto; }
+    .article-card section, .article-card details { display: block !important; }
+    .article-card .mw-collapsible-toggle { display: none !important; }
 
-    
+    /* Hide unwanted elements */
     .pcs-collapse-table-container { display: none; }
     .pcs-edit-section-link-container { display: none; }
     figure { display: none; }
 
+    /* Close button */
+    .close-btn {
+      position: absolute;
+      top: 0.5rem;
+      right: 0.75rem;
+      font-size: 1.25rem;
+      line-height: 1rem;
+      font-weight: 600;
+      color: #4b5563;
+      cursor: pointer;
+      z-index: 1001;
+      transition: color 0.15s ease;
+    }
+    .close-btn:hover { color: #000; }
+
+    /* Expanded: full-screen overlay with fixed width */
+    .article-card.expanded {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 400px;
+      height: 100vh;
+      max-height: none;
+      margin: auto;
+      border-radius: 0;
+      cursor: default;
+      z-index: 1000;
+      box-shadow: none;
+      background: white;
+    }
+    .article-content {
+      height: 100vh;
+      overflow-y: auto;
+      padding: 1.5rem; /* p-6 equivalent */
+    }
   </style>
 </head>
 <body class="flex flex-col items-center">
-  <!-- Logo (place wikiloop_logo.png beside this HTML file) -->
   <img src="logo.png" alt="wikiloop logo" class="logo mt-6 mb-2" loading="lazy" />
   <h1 class="sr-only">wikiloop</h1>
 
@@ -61,54 +76,90 @@
 
   <script>
     const container = document.getElementById('articles');
-    const sentinel  = document.getElementById('sentinel');
-    const TARGET_H  = 700;
-    const PAD_Y     = 48;  // p-6 top+bottom
+    const sentinel = document.getElementById('sentinel');
 
     async function fetchRandomArticle() {
       const res = await fetch('https://en.wikipedia.org/api/rest_v1/page/random/summary');
-      if (!res.ok) throw new Error('network');
-      const d = await res.json();
-      return { title:d.title, extract:d.extract, image:d.thumbnail?.source||d.originalimage?.source||null };
-    }
-
-    const absURLs = h=>h.replace(/\b(src|href)=("|')\/\/([^"']+)/g,'$1=$2https://$3');
-
-    async function fetchArticleHTML(title){
-      const api=`https://en.wikipedia.org/w/api.php?origin=*&action=parse&page=${encodeURIComponent(title)}&prop=text&formatversion=2&disableeditsection=true`;
-      try{
-        const r=await fetch(api); if(r.ok){const j=await r.json(); if(j?.parse?.text) return absURLs(j.parse.text);} }
-      catch{}
-      const mob=`https://en.wikipedia.org/api/rest_v1/page/mobile-html/${encodeURIComponent(title)}`;
-      const r2=await fetch(mob); if(!r2.ok) throw new Error('body'); return absURLs(await r2.text());
-    }
-
-    function createCard(article){
-      const card=document.createElement('article');
-      card.className='article-card flex flex-col bg-white shadow-lg rounded-2xl overflow-hidden';
-      const preview=`${article.image?`<img src="${article.image}" alt="${article.title}" class="preview-img" loading="lazy" />`:''}
-        <div class="p-6"><h2 class="text-2xl font-semibold mb-2">${article.title}</h2><p class="text-gray-700">${article.extract}</p></div>`;
-      card.innerHTML=preview;
-
-      const expand=async()=>{
-        card.style.cursor='default'; card.removeEventListener('click',expand);
-        const prevH=card.offsetHeight; card.dataset.prevH=prevH; card.style.height=prevH+'px'; void card.offsetHeight; card.style.height=TARGET_H+'px';
-        card.innerHTML=`<div class="article-content p-6 overflow-y-auto" style="height:${TARGET_H-PAD_Y}px"><p class="text-center text-gray-500">Loading full article…</p></div>`; addClose();
-        try{card.querySelector('.article-content').innerHTML=`<div class="prose max-w-none">${await fetchArticleHTML(article.title)}</div>`;}catch(e){console.error(e); card.querySelector('.article-content').innerHTML='<p class="text-red-600">Failed to load.</p>';}
+      if (!res.ok) throw new Error('Network error');
+      const data = await res.json();
+      return {
+        title: data.title,
+        extract: data.extract,
+        image: data.thumbnail?.source || data.originalimage?.source || null
       };
-
-      function collapse(){
-        const prev=+card.dataset.prevH||card.offsetHeight; card.style.height=TARGET_H+'px'; void card.offsetHeight; card.style.height=prev+'px';
-        card.addEventListener('transitionend',function h(){card.removeEventListener('transitionend',h); card.innerHTML=preview; card.style.cursor='pointer'; card.style.height=''; card.addEventListener('click',expand,{once:true});});
-      }
-      function addClose(){
-        const btn=document.createElement('button'); btn.className='close-btn'; btn.innerHTML='&times;'; btn.title='Close'; btn.onclick=e=>{e.stopPropagation(); collapse();}; card.appendChild(btn);
-      }
-      card.addEventListener('click',expand,{once:true}); return card;
     }
 
-    async function addArticles(n=5){ for(let i=0;i<n;i++){ try{container.appendChild(createCard(await fetchRandomArticle()));}catch(e){console.error(e);} } }
-    new IntersectionObserver(e=>{if(e[0].isIntersecting) addArticles();}).observe(sentinel);
+    const absURLs = html => html.replace(/\b(src|href)=(['"])\/\//g, '$1=$2https://');
+
+    async function fetchArticleHTML(title) {
+      const api = `https://en.wikipedia.org/w/api.php?origin=*&action=parse&page=${encodeURIComponent(title)}`
+                + `&prop=text&formatversion=2&disableeditsection=true`;
+      try {
+        const r = await fetch(api);
+        if (r.ok) {
+          const j = await r.json();
+          if (j?.parse?.text) return absURLs(j.parse.text);
+        }
+      } catch {}
+      const mob = `https://en.wikipedia.org/api/rest_v1/page/mobile-html/${encodeURIComponent(title)}`;
+      const r2 = await fetch(mob);
+      if (!r2.ok) throw new Error('Body fetch failed');
+      return absURLs(await r2.text());
+    }
+
+    function createCard(article) {
+      const card = document.createElement('article');
+      card.className = 'article-card flex flex-col bg-white shadow-lg rounded-2xl overflow-hidden';
+      card.innerHTML = `${article.image ? `<img src="${article.image}" alt="${article.title}" class="preview-img" loading="lazy"/>` : ''}`
+                     + `<div class="p-6"><h2 class="text-2xl font-semibold mb-2">${article.title}</h2>`
+                     + `<p class="text-gray-700">${article.extract}</p></div>`;
+
+      function expand() {
+        document.body.style.overflow = 'hidden';
+        card.dataset.prevHTML = card.innerHTML;
+        card.classList.add('expanded');
+        card.innerHTML = `<div class="article-content"><p class="text-center text-gray-500">Loading full article…</p></div>`;
+        addClose();
+        fetchArticleHTML(article.title)
+          .then(html => card.querySelector('.article-content').innerHTML = `<div class="prose max-w-none">${html}</div>`)
+          .catch(() => card.querySelector('.article-content').innerHTML = '<p class="text-red-600">Failed to load.</p>');
+      }
+
+      function collapse() {
+        document.body.style.overflow = '';
+        card.classList.remove('expanded');
+        card.innerHTML = card.dataset.prevHTML;
+        card.addEventListener('click', expand, { once: true });
+      }
+
+      function addClose() {
+        const btn = document.createElement('button');
+        btn.className = 'close-btn';
+        btn.textContent = '×';
+        btn.title = 'Close';
+        btn.addEventListener('click', e => { e.stopPropagation(); collapse(); });
+        card.appendChild(btn);
+      }
+
+      card.addEventListener('click', expand, { once: true });
+      return card;
+    }
+
+    async function addArticles(n = 5) {
+      for (let i = 0; i < n; i++) {
+        try {
+          const art = await fetchRandomArticle();
+          container.appendChild(createCard(art));
+        } catch (e) {
+          console.error(e);
+        }
+      }
+    }
+
+    new IntersectionObserver(entries => {
+      if (entries[0].isIntersecting) addArticles();
+    }).observe(sentinel);
+
     addArticles();
   </script>
 </body>
