--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -5,9 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>wikiloop – Infinite Wikipedia Scroll</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" rel="stylesheet" />
   <style>
     body { background: #f8fafc; margin: 0; }
     .logo { width: 12rem; }
+
+    /* Rabbit hole text styling */
+    #rabbit-text {
+      max-width: 400px;
+      color: #9ca3af;
+      text-align: center;
+    }
 
     /* Base card styling */
     .article-card {
@@ -33,8 +41,8 @@
     .close-btn {
       position: absolute;
       top: 0.5rem;
-      right: 0.75rem;
-      font-size: 1.25rem;
+      right: 2.25rem;
+      font-size: 1.75rem;
       line-height: 1rem;
       font-weight: 600;
       color: #4b5563;
@@ -43,6 +51,23 @@
       transition: color 0.15s ease;
     }
     .close-btn:hover { color: #000; }
+
+    /* Rabbit button */
+    .plus-btn {
+      position: absolute;
+      top: 0.5rem;
+      left: 0.75rem;
+      font-size: 1.75rem;
+      line-height: 1rem;
+      cursor: pointer;
+      z-index: 1001;
+      transition: color 0.15s ease;
+      color: #4b5563;
+      background: none;
+      border: none;
+      padding: 0;
+    }
+    .plus-btn:hover { color: #000; }
 
     /* Expanded: full-screen overlay with fixed width */
     .article-card.expanded {
@@ -63,13 +88,15 @@
     .article-content {
       height: 100vh;
       overflow-y: auto;
-      padding: 1.5rem; /* p-6 equivalent */
+      padding: 1.5rem;
     }
   </style>
 </head>
 <body class="flex flex-col items-center">
-  <img src="logo.png" alt="wikiloop logo" class="logo mt-6 mb-2" loading="lazy" />
+  <a href="#"><img src="logo.png" onclick="location.reload();" alt="wikiloop logo" class="logo mt-6 mb-2" loading="lazy" /></a>
   <h1 class="sr-only">wikiloop</h1>
+  <!-- Rabbit hole text -->
+  <div id="rabbit-text"></div>
 
   <div id="articles" class="w-full"></div>
   <div id="sentinel" class="h-20"></div>
@@ -77,23 +104,59 @@
   <script>
     const container = document.getElementById('articles');
     const sentinel = document.getElementById('sentinel');
+    const rabbitText = document.getElementById('rabbit-text');
+    let rabbit = "";
 
+    // Fetch random summary
     async function fetchRandomArticle() {
       const res = await fetch('https://en.wikipedia.org/api/rest_v1/page/random/summary');
       if (!res.ok) throw new Error('Network error');
       const data = await res.json();
-      return {
-        title: data.title,
-        extract: data.extract,
-        image: data.thumbnail?.source || data.originalimage?.source || null
-      };
+      return { title: data.title, extract: data.extract, image: data.thumbnail?.source || data.originalimage?.source || null };
     }
 
-    const absURLs = html => html.replace(/\b(src|href)=(['"])\/\//g, '$1=$2https://');
+    // Fetch summary by title
+    async function fetchSummaryByTitle(title) {
+      const url = `https://en.wikipedia.org/api/rest_v1/page/summary/${encodeURIComponent(title)}`;
+      const res = await fetch(url);
+      if (!res.ok) throw new Error('Summary fetch failed');
+      const data = await res.json();
+      return { title: data.title, extract: data.extract, image: data.thumbnail?.source || data.originalimage?.source || null };
+    }
 
+    // Fetch related article titles
+    async function fetchRelatedTitles(title, limit = 25) {
+      const api = `https://en.wikipedia.org/w/api.php?origin=*&action=query&list=search&srsearch=${encodeURIComponent(title)}&srlimit=${limit}&format=json`;
+      const res = await fetch(api);
+      if (!res.ok) throw new Error('Related fetch failed');
+      const data = await res.json();
+      return data.query.search.map(item => item.title);
+    }
+
+    // Load related articles and update rabbit hole text
+    async function loadRelated(baseTitle) {
+      container.innerHTML = '';
+      rabbitText.innerHTML = `Going down the rabbit hole of <strong>${baseTitle}</strong>`;
+      try {
+        const titles = await fetchRelatedTitles(baseTitle);
+        for (const t of titles) {
+          if (t == baseTitle)
+            continue;
+          const art = await fetchSummaryByTitle(t);
+          container.appendChild(createCard(art));
+        }
+
+        rabbit = "";
+      } catch (e) {
+        console.error(e);
+      }
+    }
+
+    const absURLs = html => html.replace(/\b(src|href)=(['"])\/\//g, `$1=$2https://`);
+
+    // Fetch full HTML of article
     async function fetchArticleHTML(title) {
-      const api = `https://en.wikipedia.org/w/api.php?origin=*&action=parse&page=${encodeURIComponent(title)}`
-                + `&prop=text&formatversion=2&disableeditsection=true`;
+      const api = `https://en.wikipedia.org/w/api.php?origin=*&action=parse&page=${encodeURIComponent(title)}&prop=text&formatversion=2&disableeditsection=true`;
       try {
         const r = await fetch(api);
         if (r.ok) {
@@ -109,7 +172,7 @@
 
     function createCard(article) {
       const card = document.createElement('article');
-      card.className = 'article-card flex flex-col bg-white shadow-lg rounded-2xl overflow-hidden';
+      card.className = 'article-card flex flex-col bg-white shadow-lg overflow-hidden';
       card.innerHTML = `${article.image ? `<img src="${article.image}" alt="${article.title}" class="preview-img" loading="lazy"/>` : ''}`
                      + `<div class="p-6"><h2 class="text-2xl font-semibold mb-2">${article.title}</h2>`
                      + `<p class="text-gray-700">${article.extract}</p></div>`;
@@ -120,6 +183,7 @@
         card.classList.add('expanded');
         card.innerHTML = `<div class="article-content"><p class="text-center text-gray-500">Loading full article…</p></div>`;
         addClose();
+        addPlus();
         fetchArticleHTML(article.title)
           .then(html => card.querySelector('.article-content').innerHTML = `<div class="prose max-w-none">${html}</div>`)
           .catch(() => card.querySelector('.article-content').innerHTML = '<p class="text-red-600">Failed to load.</p>');
@@ -141,11 +205,29 @@
         card.appendChild(btn);
       }
 
+      function addPlus() {
+        const btn = document.createElement('button');
+        btn.className = 'plus-btn';
+        //btn.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor" width="1em" height="1em"><path d="M232.7 32c-25.6 0-46.4 17.5-51.4 42.5L128 288.7c-2.7 16.9 10 32.1 26.8 32.1H192v64c0 17.7 14.3 32 32 32s32-14.3 32-32V320h36.5c16.8 0 29.5-15.2 26.8-32.1L284.1 74.5C279.1 49.5 258.3 32 232.7 32z"/></svg>';
+        btn.innerHTML = '+'
+        btn.title = 'Load related';
+        btn.addEventListener('click', e => {
+          e.stopPropagation();
+          collapse();
+          rabbit = article.title;
+          loadRelated(article.title);
+        });
+        card.appendChild(btn);
+      }
+
       card.addEventListener('click', expand, { once: true });
       return card;
     }
 
     async function addArticles(n = 5) {
+      if (rabbit.length > 0)
+        return;
+
       for (let i = 0; i < n; i++) {
         try {
           const art = await fetchRandomArticle();
