--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -10,7 +10,6 @@
     body { background: #f8fafc; margin: 0; }
     .logo { width: 12rem; }
 
-
     input {
       max-width: 390px;
     }
@@ -97,20 +96,47 @@
       overflow-y: auto;
       padding: 1.5rem;
     }
+
+    /* Floating refresh button */
+    .refresh-btn {
+      position: fixed;
+      bottom: 2rem; /* ~32px */
+      right: 2rem;  /* ~32px */
+      width: 3.5rem; /* 56px */
+      height: 3.5rem; /* 56px */
+      border-radius: 9999px; /* fully rounded */
+      background: #374151; /* gray-700 */
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem; /* icon size */
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+      transition: background 0.2s ease;
+      z-index: 1100; /* above cards */
+    }
+    .refresh-btn:hover {
+      background: #1f2937; /* gray-800 */
+    }
   </style>
 </head>
 <body class="flex flex-col items-center">
   <!-- Logo and Search -->
   <a href="#"><img src="logo.png" onclick="location.reload();" alt="wikiloop logo" class="logo mt-6 mb-2" loading="lazy" /></a>
   <div class="w-full max-w-md px-4 mb-4" style="text-align: center;">
-    <input id="search-input" type="text" placeholder="Go down the rabbit hole!" 
+    <input id="search-input" type="text" placeholder="Go down the rabbit hole!"
            class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
   </div>
 
-  <div id="rabbit-text"></span></div><div style="display: none;" id="rabbit-value"></div>
+  <div id="rabbit-text">Go down the rabbit hole of Wikipedia articles</div><div style="display: none;" id="rabbit-value"></div>
 
   <div id="articles" class="w-full"></div>
   <div id="sentinel" class="h-20"></div>
+
+  <!-- Floating Refresh Button -->
+  <button id="refresh-btn" class="refresh-btn" title="Refresh page" aria-label="Refresh" onclick="location.reload()">
+    <i class="fas fa-sync-alt"></i>
+  </button>
 
   <script>
     const container = document.getElementById('articles');
@@ -196,9 +222,21 @@
         card.innerHTML = `<div class="article-content"><p class="text-center text-gray-500">Loading full article…</p></div>`;
         addClose();
         addPlus();
-        fetchArticleHTML(article.title)
-          .then(html => card.querySelector('.article-content').innerHTML = `<div class="prose max-w-none">${html}</div>`)
-          .catch(() => card.querySelector('.article-content').innerHTML = '<p class="text-red-600">Failed to load.</p>');
+        fetchArticleHTML(article.title).then(html => {
+          const contentEl = card.querySelector('.article-content');
+          contentEl.innerHTML = `<div class="prose max-w-none">${html}</div>`;
+
+          /* 🔗 Intercept link clicks inside article */
+          contentEl.addEventListener('click', ev => {
+            const link = ev.target.closest('a');
+            if (link) {
+              ev.preventDefault();
+              ev.stopPropagation();
+              collapse();
+              loadRelated(link.textContent.trim() || link.href);
+            }
+          });
+        }).catch(() => card.querySelector('.article-content').innerHTML = '<p class="text-red-600">Failed to load.</p>');          
       }
 
       function collapse() {
@@ -226,7 +264,7 @@
           e.stopPropagation();
           collapse();
           rabbit = article.title;
-          loadRelated(article.title);
+          loadRelated(article.title, false);
         });
         card.appendChild(btn);
       }
@@ -236,7 +274,7 @@
     }
 
     // Load related articles (rabbit hole)
-    async function loadRelated(baseTitle) {
+    async function loadRelated(baseTitle, includeTitle=true) {
       container.innerHTML = '';
       rabbitText.innerHTML = `Going down the rabbit hole of <strong>${baseTitle}</strong>`;
       rabbitValue.innerHTML = baseTitle;
@@ -245,7 +283,7 @@
       try {
         const titles = await fetchRelatedTitles(baseTitle);
         for (const t of titles) {
-          if (t === baseTitle) continue;
+          if ((t === baseTitle) && (!includeTitle)) continue;
           const art = await fetchSummaryByTitle(t);
           if (baseTitle == rabbitValue.innerHTML)
               container.appendChild(createCard(art));
