--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -42,6 +42,7 @@
     .gallery { display: none; }
     .pcs-edit-section-link-container { display: none; }
     figure { display: none; }
+    .pcs-section-hideable-header { display: none; }
 
     /* Close button */
     .close-btn {
