--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -19,6 +19,10 @@
       background: #1f2937;
     }
 
+    #info-modal {
+      z-index: 2000;
+    }
+
     #info-modal p {
         margin-bottom: 15px;
     }
