--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -4,6 +4,41 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wikiloop – Infinite Wikipedia Scroll</title>
+
+  <!-- SEO -->
+  <meta name="description" content="Wikiloop – infinite, distraction‑free Wikipedia browsing. Explore Wikipedia's rabbit holes with endless scroll and smart search.">
+  <meta name="keywords" content="Wikipedia, rabbit hole, infinite scroll, education, knowledge, browsing">
+  <meta name="author" content="Alvaro Rivas">
+
+  <!-- Mobile theming -->
+  <meta name="theme-color" content="#374151">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Wikiloop – Infinite Wikipedia Scroll">
+  <meta property="og:description" content="Explore Wikipedia's rabbit holes with endless scroll and smart search.">
+  <meta property="og:image" content="https://rivas-alvaro.github.io/wikiloop/preview.png">
+  <meta property="og:url" content="https://rivas-alvaro.github.io/wikiloop/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Wikiloop – Infinite Wikipedia Scroll">
+  <meta name="twitter:description" content="Explore Wikipedia's rabbit holes with endless scroll and smart search.">
+  <meta name="twitter:image" content="https://rivas-alvaro.github.io/wikiloop/preview.png">
+  <meta name="twitter:url" content="https://rivas-alvaro.github.io/wikiloop/">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://rivas-alvaro.github.io/wikiloop/">
+
+  <link
+    rel="icon"
+    type="image/png"
+    href="favicon.png"
+    sizes="128x128"
+  />
+
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet" />
