--- a/wikiloop/index.html
+++ b/wikiloop/index.html
@@ -6,7 +6,7 @@
   <title>Wikiloop – Infinite Wikipedia Scroll</title>
 
   <!-- SEO -->
-  <meta name="description" content="Wikiloop – infinite, distraction‑free Wikipedia browsing. Explore Wikipedia's rabbit holes with endless scroll and smart search.">
+  <meta name="description" content="Explore Wikipedia's rabbit holes with endless scroll and smart search.">
   <meta name="keywords" content="Wikipedia, rabbit hole, infinite scroll, education, knowledge, browsing">
   <meta name="author" content="Alvaro Rivas">
 
