--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello world!!
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Alvaro Rivas</title>
+        <link rel="stylesheet" href="./css/style.css">
+        
+    </head>
+    <body>
+        <header>
+            <h1><a href="./">Alvaro Rivas</a></h1>
+            <nav>
+                <ul>
+                    <li><a href="./" class="active">HOME</a></li>
+                    <li><a href="./books/" class="li-books">BOOKS</a></li>
+                    <li><a href="./essays" class="li-essays">ESSAYS</a></li>
+                    <li><a href="./projects" class="li-projects">SIDE PROJECTS</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <main>
+            <section>
+                <h2 id="page-title">I'm Alvaro Rivas &mdash; welcome to my curiosity cabinet!</h2>
+                
+                <p>I write because thinking out loud is more fun than keeping quiet. You will find <a href="./essays">essays</a> on philosophy, politics, linguistics, and the occasional detour into whatever idea grabs my attention.</p>
+
+<p>When the analytical dust settles, I switch gears and write some fiction, usually with a philosophical note. Check out my <a href="./books">latest novel</a>, <i>Calculated Bliss</i>!</p>
+
+<p>Outside the written word, I occassionally play with code and work on <a href="./projects">side-projects</a>.</p>
+            </section>
+        </main>
+
+        <footer>
+            <p>Alvaro Rivas</p>
+        </footer>
+    </body>
+</html>
