--- a/essays/index.html
+++ b/essays/index.html
@@ -28,6 +28,16 @@
         <link rel="canonical" href="https://rivas-alvaro.github.io/wikiloop/">
         
         -->
+        
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMNKZ93T2D"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-DMNKZ93T2D');
+        </script>        
 
         <link
         rel="icon"
