--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <link
         rel="icon"
         type="image/png"
-        href="assets/favicon.png"
+        href="./assets/favicon.png"
         sizes="128x128"
         />
 
